@@ -1,50 +1,22 @@
 package com.feature5.pqrs.config;
 
-import com.feature5.pqrs.entities.Usuario;
-import com.feature5.pqrs.repository.UsuarioRepository;
-import lombok.RequiredArgsConstructor;
-import org.springframework.security.core.GrantedAuthority;
-import org.springframework.security.core.authority.SimpleGrantedAuthority;
-import org.springframework.security.core.userdetails.*;
-import org.springframework.security.crypto.password.PasswordEncoder;
+import org.springframework.security.core.userdetails.User;
+import org.springframework.security.core.userdetails.UserDetails;
+import org.springframework.security.core.userdetails.UserDetailsService;
+import org.springframework.security.core.userdetails.UsernameNotFoundException;
 import org.springframework.stereotype.Service;
-import org.springframework.transaction.annotation.Transactional;
-
 import java.util.Collections;
-import java.util.List;
 
 @Service
-@RequiredArgsConstructor
 public class CustomUserDetailsService implements UserDetailsService {
 
-    private final UsuarioRepository usuarioRepository;
-    private final PasswordEncoder passwordEncoder;
-
     @Override
-    @Transactional(readOnly = true)
     public UserDetails loadUserByUsername(String username) throws UsernameNotFoundException {
-
-        // 🔹 Admin temporal solo para pruebas locales
-        if ("admin".equals(username)) {
-            return User.builder()
-                    .username("admin")
-                    .password(passwordEncoder.encode("admin123"))
-                    .authorities(List.of(new SimpleGrantedAuthority("ROLE_ADMIN")))
-                    .build();
+        // Aquí podrías consultar la BD (por ahora usuario simulado)
+        if (username.equals("admin")) {
+            return new User("admin", "{noop}1234", Collections.emptyList());
         }
-
-        // 🔹 Usuario real
-        Usuario usuario = usuarioRepository.findByNickname(username)
-                .orElseThrow(() -> new UsernameNotFoundException("Usuario no encontrado: " + username));
-
-        String rol = usuario.getRol() != null && usuario.getRol().getDescripcion() != null
-                ? usuario.getRol().getDescripcion().toUpperCase()
-                : "USER";
-
-        if (!rol.startsWith("ROLE_")) rol = "ROLE_" + rol;
-
-        List<GrantedAuthority> authorities = List.of(new SimpleGrantedAuthority(rol));
-
-        return new User(usuario.getNickname(), usuario.getPassword(), authorities);
+        throw new UsernameNotFoundException("Usuario no encontrado: " + username);
     }
 }
+
